<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.9</version>
	</parent>
	<groupId>com.smarsh.dataengineering</groupId>
	<artifactId>vams-utility-repo</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>vams-eml-comparator</module>
		<module>vams-byok-encrypter</module>
		<module>vams-process-util</module>
		<module>vams-jobs-setup</module>
	</modules>
	<scm>
		<tag>HEAD</tag>
	</scm>
	<properties>
		<java.version>21</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- Jakarta JsonP properties -->
		<parsson.version>1.1.7</parsson.version>

		<spring-boot.version>3.5.9</spring-boot.version>
		<spring-cloud.version>2025.0.0</spring-cloud.version>
		<spring-cloud-aws.version>3.4.2</spring-cloud-aws.version>

		<springdoc-openapi.version>2.8.13</springdoc-openapi.version>
		<spring-boot-admin.version>3.5.6</spring-boot-admin.version>
		<netty-http-authenticator.version>1.5</netty-http-authenticator.version>
		<aws-sdk-java.version>2.31.78</aws-sdk-java.version>
		<commons-csv.version>1.14.1</commons-csv.version>
		<xstream.version>1.4.21</xstream.version>

		<ec-vam-core.version>1.0.0-rc.19</ec-vam-core.version>
		<ec-vam-security.version>1.0.0-rc.6</ec-vam-security.version>

		<!-- Error Prone Setup -->
		<error-prone.version>2.45.0</error-prone.version>
		<nullaway.version>0.12.15</nullaway.version>

		<!-- SpotBugs Setup -->
		<disable.spotbugs>false</disable.spotbugs>
		<spotbugs.failThreshold/>
		<spotbugs.failOnError>false</spotbugs.failOnError>
		<spotbugs.version>4.9.8</spotbugs.version>
		<spotbugs-mvn-plugin.version>4.9.8.2</spotbugs-mvn-plugin.version>

		<!-- CheckStyle Setup -->
		<puppycrawl-tools-checkstyle.version>12.3.0</puppycrawl-tools-checkstyle.version>
		<vams-checkstyle.version>1.0.0-rc.2</vams-checkstyle.version>
		<spring-javaformat.version>0.0.47</spring-javaformat.version>
		<vams-checkstyle.branch>master</vams-checkstyle.branch>
		<checkstyle.suppressions.file>
			https://raw.githubusercontent.com/Smarsh/vams-mvn-tools/refs/heads/master/vams-checkstyle/src/checkstyle/checkstyle-suppressions.xml
		</checkstyle.suppressions.file>
		<checkstyle.additional.suppressions.file>
			${maven.multiModuleProjectDirectory}/src/checkstyle/checkstyle-suppressions.xml
		</checkstyle.additional.suppressions.file>
		<maven-checkstyle-plugin.failsOnError>true</maven-checkstyle-plugin.failsOnError>
		<maven-checkstyle-plugin.failsOnViolation>true</maven-checkstyle-plugin.failsOnViolation>
		<maven-checkstyle-plugin.includeTestSourceDirectory>true</maven-checkstyle-plugin.includeTestSourceDirectory>

		<!-- JaCoCo Code Coverage -->
		<jacoco.haltOnFailure>false</jacoco.haltOnFailure>
		<jacoco.line.coverage.minimum>0.80</jacoco.line.coverage.minimum>
		<jacoco.branch.coverage.minimum>0.80</jacoco.branch.coverage.minimum>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-annotations</artifactId>
				<version>${spotbugs.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>de.codecentric</groupId>
				<artifactId>spring-boot-admin-dependencies</artifactId>
				<version>${spring-boot-admin.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>bom</artifactId>
				<version>${aws-sdk-java.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.awspring.cloud</groupId>
				<artifactId>spring-cloud-aws-dependencies</artifactId>
				<version>${spring-cloud-aws.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.eclipse.parsson</groupId>
				<artifactId>parsson</artifactId>
				<version>${parsson.version}</version>
			</dependency>

			<!-- we need this until the eureka client updates to this version -->
			<dependency>
				<groupId>com.thoughtworks.xstream</groupId>
				<artifactId>xstream</artifactId>
				<version>${xstream.version}</version>
			</dependency>

			<dependency>
				<groupId>com.smarsh.dataengineering</groupId>
				<artifactId>ec-vam-eureka-support</artifactId>
				<version>${ec-vam-core.version}</version>
			</dependency>

			<dependency>
				<groupId>com.smarsh.dataengineering</groupId>
				<artifactId>ec-vam-security-web</artifactId>
				<version>${ec-vam-security.version}</version>
			</dependency>

			<dependency>
				<groupId>com.smarsh.dataengineering</groupId>
				<artifactId>ec-vam-security-webflux</artifactId>
				<version>${ec-vam-security.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>io.spring.javaformat</groupId>
					<artifactId>spring-javaformat-maven-plugin</artifactId>
					<version>${spring-javaformat.version}</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.14</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>3.6.2</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<parameters>true</parameters>
					<fork>true</fork>
					<compilerArgs>
						<arg>-XDcompilePolicy=simple</arg>
						<arg>--should-stop=ifError=FLOW</arg>
						<arg>-Xplugin:ErrorProne -XepOpt:NullAway:AnnotatedPackages=com.uber -XepDisableWarningsInGeneratedCode -Xep:RequireExplicitNullMarking:WARN
						</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
					</compilerArgs>
					<annotationProcessorPaths>
						<path>
							<groupId>com.google.errorprone</groupId>
							<artifactId>error_prone_core</artifactId>
							<version>${error-prone.version}</version>
						</path>
						<path>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-configuration-processor</artifactId>
							<version>${spring-boot.version}</version>
						</path>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
						<path>
							<groupId>com.uber.nullaway</groupId>
							<artifactId>nullaway</artifactId>
							<version>${nullaway.version}</version>
						</path>

						<!-- Other annotation processors go here.

						If 'annotationProcessorPaths' is set, processors will no longer be
						discovered on the regular -classpath; see also 'Using Error Prone
						together with other annotation processors' below. -->
					</annotationProcessorPaths>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>io.spring.javaformat</groupId>
				<artifactId>spring-javaformat-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>check</id>
						<phase>verify</phase>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<haltOnFailure>${jacoco.haltOnFailure}</haltOnFailure>
							<rules>
								<rule>
									<element>BUNDLE</element>
									<limits>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>${jacoco.line.coverage.minimum}</minimum>
										</limit>
										<limit>
											<counter>BRANCH</counter>
											<value>COVEREDRATIO</value>
											<minimum>${jacoco.branch.coverage.minimum}</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>
	<profiles>
		<profile>
			<id>apple-silicon</id>
			<activation>
				<os>
					<family>mac</family>
					<arch>aarch64</arch>
				</os>
			</activation>
			<properties>
				<os.detected.classifier>osx-aarch_64</os.detected.classifier>
			</properties>
			<dependencies>
				<dependency>
					<groupId>io.netty</groupId>
					<artifactId>netty-resolver-dns-native-macos</artifactId>
					<classifier>osx-aarch_64</classifier>
				</dependency>
				<dependency>
					<groupId>io.netty</groupId>
					<artifactId>netty-transport-native-epoll</artifactId>
					<classifier>linux-aarch_64</classifier>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>coverage</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>merge-results</id>
								<phase>verify</phase>
								<goals>
									<goal>merge</goal>
								</goals>
								<configuration>
									<fileSets>
										<fileSet>
											<directory>${maven.multiModuleProjectDirectory}</directory>
											<includes>
												<include>**/target/jacoco.exec</include>
											</includes>
										</fileSet>
									</fileSets>
									<destFile>${maven.multiModuleProjectDirectory}/target/jacoco-merged.exec</destFile>
								</configuration>
							</execution>
							<execution>
								<id>merged-report</id>
								<phase>verify</phase>
								<goals>
									<goal>report</goal>
								</goals>
								<configuration>
									<dataFile>${maven.multiModuleProjectDirectory}/target/jacoco-merged.exec</dataFile>
									<outputDirectory>${maven.multiModuleProjectDirectory}/target/site/jacoco-aggregate
									</outputDirectory>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>release.build</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-enforcer-plugin</artifactId>
						<executions>
							<execution>
								<id>enforce-no-snapshots</id>
								<goals>
									<goal>enforce</goal>
								</goals>
								<configuration>
									<rules>
										<requireReleaseDeps>
											<message>No Snapshot Dependencies Allowed!</message>
										</requireReleaseDeps>
										<requireReleaseVersion>
											<message>No Snapshot Version Allowed!</message>
										</requireReleaseVersion>
									</rules>
									<fail>true</fail>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
